# KGTN-ens

./: .gitignore  README.md  requirements.txt
DataSplit/FeatureExtractor/: base_classes_train_template_smallbatch.yaml
FeatureExtractor/: main.py  save_features.py
KGTN/: 9_other_backbones.ipynb  KGTN.py  main_KGTN-onlytest.py  main_KGTN.py
KnowledgeGraphMatrix/: 1_wordnet2wikidata.py  2_mappings_wikidata_problems.txt  WikidataGraph.npy  mappings_wikidata.json  mappings_wikidata_problems.txt
notebooks/: 10_more_embeddings.ipynb  12_entropy.ipynb  1_pretrained_wikidata_embeddings_check.ipynb  2_imagenet_embeddings.ipynb  3_create_adjacency_matrices.ipynb  4_plots.ipynb  5_adjacency_matrix_comparisons.ipynb  6_plots_processed_matrix.ipynb  7_kgtk_embeddings.ipynb  8_plots_kgtnens.ipynb  9_wikidata5m.ipynb  pyproject.toml
notebooks/data/: entity_to_index_dict.json  imagenet_wikidata_embeddings.npy
scripts/: KGTN_wikidata.sh  KGTN_wikidata_CosSim.sh  KGTN_wikidata_InnerProduct.sh  KGTN_wikidata_PearCorr.sh  KGTN_wikidata_run_three.sh  KGTNens_CosSim.sh  KGTNens_InnerProduct.sh  baseline.sh
scripts/ResNet10_sgm/: KGTN_wv_CosSim.sh  KGTN_wv_InnerProduct.sh  KGTN_wv_PearCorr.sh  KGTNens_CosSim-mean.sh  KGTNens_CosSim.sh  KGTNens_InnerProduct.sh  KGTNens_PearCorr.sh  KGTNens_all.sh  SaveFeature.sh  baseline.sh
scripts/ResNet18_sgm/: KGTN_wv_CosSim.sh  KGTN_wv_InnerProduct.sh  KGTN_wv_PearCorr.sh  KGTNens_CosSim.sh  KGTNens_InnerProduct.sh  SaveFeature.sh  TrainFeatureExtractor.sh  baseline.sh
scripts/ResNet34_sgm/: TrainFeatureExtractor.sh
(+8 files in other folders)
