[tool.poetry]
name = "kgtn-notebooks"
version = "0.1.0"
description = ""
authors = ["Dominik Filipiak <757111+0xDFDFDFDF@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
torchbiggraph = "^1.0.0"
gensim = "^4.1.2"
ipykernel = "^6.5.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
